# es_util

./: .clang-format  .gitignore  CMakeLists.txt  README.md  function.hpp
doc/: ALGORITHM.md  FENWICK_TREE.md  TUPLE.md  algorithm.md  fenwick_tree.md  tuple.md
include/es_util/: algorithm.hpp  array.hpp  bitwise.hpp  enum_class_index.hpp  error.hpp  es_util.natvis  exception.hpp  function.cpp  function.hpp  iterator.hpp  numeric.hpp  phys.hpp  string.hpp  thread.hpp  time.hpp  timer.hpp  tuple.hpp  type_traits.hpp
include/es_util/algorithm/: accumulate_non_empty.hpp  all_any_none_of_pairs.hpp  find.hpp  for_each_pair.hpp  is_circ_permutation.hpp  sort.hpp
include/es_util/array/: cat.hpp  core.hpp  make_array.hpp  sum.hpp  to_array.hpp
include/es_util/container/: fenwick_tree.hpp
include/es_util/iterator/: iterable.hpp  smart_ptr_iterator.hpp  transform_iterator.hpp
include/es_util/numeric/: abs.hpp  const.hpp  det.hpp  even_odd.hpp  find_root_newton.hpp  linear_grid.hpp  power.hpp  special.hpp  trapez_int.hpp
include/es_util/phys/: atomic_units.hpp  const.hpp
include/es_util/string/: ends_with.hpp  size_string.hpp
include/es_util/thread/: barrier.hpp
include/es_util/tuple/: all_any_none.hpp  core.hpp  for_each.hpp  forward_as_zipped.hpp  map.hpp  select.hpp  to_array.hpp
include/es_util/type_traits/: all_any_none.hpp  always_false.hpp  are_same.hpp  core.hpp  functor.hpp  index_of.hpp  is_const_reference.hpp  is_one_of.hpp  nth.hpp  remove_cv_ref.hpp  std_integral_constant.hpp  sum_values.hpp  type_identity.hpp
include/esu/: type_traits.hpp
include/esu/type_traits/: core.hpp
src/numeric/: special.cpp
test/: CMakeLists.txt  test.cpp
test/algorithm/: all_any_none_of_pairs_test.hpp  find_test.hpp  for_each_pair_test.hpp  is_circ_permutation_test.hpp  sort_test.hpp
test/array/: core_test.hpp  sum_test.hpp  to_array_test.hpp
test/src/algorithm/: all_any_none_of_pairs.cpp  all_any_none_of_pairs_test.cpp  find.cpp  find_test.cpp  for_each_pair.cpp  for_each_pair_test.cpp  is_circ_permutation.cpp  is_circ_permutation_test.cpp  sort.cpp  sort_test.cpp
test/src/array/: core.cpp  core_test.cpp  sum.cpp  to_array.cpp  to_array_test.cpp
test/src/container/: fenwick_tree.cpp
test/src/string/: ends_with.hpp
test/src/type_traits/: all_any_none.hpp  all_any_none_test.hpp  index_of.hpp  nth.hpp
test/string/: ends_with_test.hpp
test/type_traits/: all_any_none_test.hpp  index_of_test.hpp  nth_test.hpp
